--- a/index.html
+++ b/index.html
@@ -6,10 +6,69 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My protfulio</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
+    <section class="top-banner">
+        <div class="haif-with">
+
+            <h1>Welcome To</h1>
+            <h1><span class="color">Juboraj Islam Mamun </span>World!</h1>
+            <h3>Build Climber and Train Stopper</h3>
+            <p>You might saw me jumping, climbing buildings, and stopping trains. But nobody pays me a dime for that
+                work. That's why I am learning and mastering web development. I will not stop until I become the Web
+                Development Hero.</p>
+            <a class="button" href="#">HIRE ME</a>
+
+        </div>
+        <div class="haif-with">
+            <img src="./1641275710040.png" alt="Juboraj islam mamun">
+        </div>
+    </section>
+    <section class="dream-banner">
+        <div class="haif-with">
+            <img src="./1641275710040.png" alt="mamun">
+        </div>
+        <div class="haif-with">
+            <h1>Dream Big</h1>
+            <h3>Become a web developer</h3>
+            <p>I already learned the basic HTML and CSS. I can build any simple website. I can even teach my grandma how
+                to make simple website. My goal is to build 3 websites and learn advanced topic</p>
+            <a class="button" href="#">DOWENLODE RESUME</a>
+        </div>
+    </section>
+    <section class="expreance-area">
+        <h1>Experiences</h1>
+        <div class="exprance-item">
+            <div id="segend-border" class="babt-item item">
+                <h2>Full Stack Web Developer</h2>
+                <h3 class="color">2021-Present | Pro Level Developer</h3>
+                <p>I am the master of HTML, CSS and Javascript. I know everything needed to make a website function,
+                    efficient. I didn't stop with the web. I went beyond with most popular Javascript framework
+                    called
+                    Vue JS. I even know the deployment, server and security. I will give you 100% web solution.</p>
+
+            </div>
+            <div id="first-border" class="web-item item">
+                <h2>Full Stack Web Developer</h2>
+                <h3 class="color">2021-Present | Pro Level Developer</h3>
+                <p>I am the master of HTML, CSS and Javascript. I know everything needed to make a website function,
+                    efficient. I didn't stop with the web. I went beyond with most popular Javascript framework
+                    called
+                    Vue JS. I even know the deployment, server and security. I will give you 100% web solution.</p>
+
+
+            </div>
+        </div>
+
+    </section>
+    <footer>
+        <p>@All Copy Right Recive By Juboraj Islam</p>
+    </footer>
 
 </body>
 
